fix issue with page name on mobile

--- a/eahub/static/styles/main.css
+++ b/eahub/static/styles/main.css
@@ -54,16 +54,23 @@ body {
 
 .navbar h4 {
   color: grey;
-  float: right;
-  margin-top: 18px;
+  display: inline-block;
+  margin-top: 20px;
   padding-left: 5px;
 }
 
 .navbar img {
   width: 120px;
   height: auto;
-  margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.navbar .logo {
+  margin-top: 12px;
+}
+
+.navbar .logo_with_page_name {
+  margin-top: -2px;
 }
 
 .navbar-nav > li:hover{
